# YinHe

AIDLClient/: .project  AndroidManifest.xml
AIDLServer/: .project
BigHomework/: .classpath  .project  project.properties
FileManagement/: .project  AndroidManifest.xml
HttpServerTest/: .project
IPTVSetting/: .project  Android.mk
LibTsPlayer/: .project  Android.mk  AndroidManifest.xml
LibTsPlayer/jni/: Android.mk
NetEaseNews/: AndroidManifest.xml
Receive/: .project
SettingsProvider/: .project
WebApp/: .project  AndroidManifest.xml
YinheSetting/: .project
ZTestContentProvider/: .project  AndroidManifest.xml
ZTestContentResolver/: .project  AndroidManifest.xml
ZXmlParser/: .project  AndroidManifest.xml
iptvs/: content_iptv.aidl  content_iptv_aidl.d  content_iptv_aidl.srcjar  content_iptv_java.dex.jar.inputs  content_iptv_java.dex.jar.md5.stamp  content_iptv_java.sources  content_iptv_java__compile_java.javac.jar.md5.stamp  content_iptv_java__compile_java__javac.d  content_iptv_java__dex.d  content_iptv_java__lint.d  content_iptv_jni_headers__jni_gen.AuthenticationCTC.d  content_iptv_jni_headers__jni_gen.DeviceCallback.d  (+2 more)
iptvs/iptv/: AuthenticationCTC.cc  AuthenticationCTC.h  BUILD.gn  DeviceCallback.java  EthernetList.cc  EthernetList.h  HTMLObjectElement.cc  HTMLObjectElement.h  HTMLObjectElement.java  KeeperClient.java  MediaPlayerCTC.cc  MediaPlayerCTC.h  MediaPlayerCTC.java  MediaProcessor_interface.cc  MediaProcessor_interface.h  MediaProcessor_library_function.cc  MediaProcessor_library_function.h  STBAppManagerCTC.cc  STBAppManagerCTC.h  UtilityCTC.cc  UtilityCTC.h  UtilityCTC.java  content_iptv_java.build_config  content_iptv_java__build_config.d  content_iptv_jni_headers__jni_gen.HTMLObjectElement.d  content_iptv_jni_headers__jni_gen.UtilityCTC.d  content_iptv_jni_lib.ninja  device_callback.cc  device_callback.h  device_interface.cc  device_interface.h  device_library_function.cc  device_library_function.h  iptv_keycode_define.h
iptvs/iptv/content_iptv_java__lint/: result.xml.md5.stamp
iptvs/iptv/content_iptv_jni_headers/content/iptv/jni/: MediaPlayerCTC_jni.h
iptvs/iptv/java/src/com/android/settings/keeper/: KeeperAidl.aidl
iptvs/iptv/java/src/com/yinhe/android/iptv/: AuthenticationCTC.java  HttpPlayer.java  STBAppManagerCTC.java
iptvs/iptv/jni/: STBAppManagerCTC_jni.h  UtilityCTC_jni.h
(+528 files in other folders)
